fix spacing for index and show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,9 +9,8 @@
 }
 
 .index-content {
+  min-width: 50%;
   @include mixins.media(tabletAndUp) {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+    max-width: 70%;
   }
 }
