--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -51,6 +51,7 @@
 
   // Border
   --border: solid 2px var(--color-light);
+  --border-dark: #444;
 
   // Shadows
   --shadow-large: 2px 4px 10px hsl(0 0% 0% / 0.1);
